@@ -41,7 +41,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    BSD license.
+    BSD 2-Clause License
 
 VERSION
     0.01
